Added coding projects to coding.html

--- a/changelog.html
+++ b/changelog.html
@@ -109,16 +109,17 @@
 
             <h3 class="text-center">10 most recent changes</h3>
 
-            <div class="commit-spacing"></div>
+            <div class="card-spacing"></div>
 
-            <!-- note regarding GitHub's commit message formatting -->
-            <h5 class="text-center"><i>Please note that while GitHub internally supports separate commit
+            <!-- note regarding GitHub's card-spacing message formatting -->
+            <h5 class="text-center"><i>Please note that while GitHub internally supports separate card-spacing
                     summaries
                     and descriptions, their public API does not</i></h5>
-            <h5 class="text-center"><i>Therefore, if a commit description was provided, it will appear appended to the
+            <h5 class="text-center"><i>Therefore, if a card-spacing description was provided, it will appear appended to
+                    the
                     summary</i></h5>
 
-            <div class="commit-spacing"></div>
+            <div class="card-spacing"></div>
 
             <!-- the contents of div id: "changelog-body" are populated by changelog.js -->
             <!-- once loaded, contains Bootstrap cards with 10 most recent commits to the site's GitHub repo -->
