--- a/coding.html
+++ b/coding.html
@@ -99,7 +99,265 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <h1 class="text-center">Coming soon!</h1>
+            <h3 class="text-center">Coding Projects</h3>
+
+            <div class="card-spacing"></div>
+
+            <h5 class="text-center"><i>Please note that academic integrity guidelines prohibit me from publicly sharing
+                    code for school projects</i></h5>
+            <h5 class="text-center"><i>Please contact me at <a
+                        href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> to request a private copy</i></h5>
+            <h5 class="text-center"><i>Additionally, some projects may not have any publicly available code</i></h5>
+
+            <div class="card-spacing"></div>
+
+            <!-- begin project descriptions -->
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023 - Sep
+                                2023)</span></h5>
+                        <p class="card-text">This is a collection of short Racket functions intended to familiarize
+                            programmers with the language. It makes significant use of features such as pattern
+                            matching and recursion, along with concepts such as lambda calculus.
+                            <br><br>
+                            This project is associated with <i>CMSC430: Introduction to Compilers</i> at the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Vertical Indent Lines - Notion (JavaScript)<span
+                                style="float: right;">(Aug
+                                2023 - Present)</span></h5>
+                        <p class="card-text">This project is intended to create vertical lines denoting indent
+                            positioning while using Notion. When taking notes in class, I sometimes lose track of which
+                            indent position I am currently at, making it difficult to properly organize my notes; this
+                            script will fix that by displaying one vertical line for each indent. To bypass Notion's DOM
+                            manipulation prevention script without compromising security, this script adds CSS
+                            pseudo-elements to the page.
+                            <br><br>
+                            This project is not affiliated with Notion.
+                        </p>
+                        <a href="https://github.com/psmit703/notion-indent-lines"
+                            class="btn btn-primary card-link">GitHub
+                            Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">This website! (HTML, CSS, JavaScript)<span style="float: right;">(Jun
+                                2023 - Present)</span>
+                        </h5>
+                        <p class="card-text">My personal website! Yay! This is a static site hosted by GitHub Pages. In
+                            addition to the standard HTML, CSS, and JavaScript, it makes use of Bootstrap for
+                            some of the stylization, jQuery for ensuring Promise resolution, and GitHub's REST API for
+                            loading
+                            changelog content. The site also makes use of Plausible Analytics and Clicky Website
+                            Analytics for generating privacy-friendly usage statistics.</p>
+                        <a href="https://github.com/psmit703/personal-website" class="btn btn-primary card-link">GitHub
+                            Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Comet Statistics<span style="float: right;">(Jun
+                                2023 - Present)</span></h5>
+                        <p class="card-text">This is a site that displays trends in comet data over time. Frontend makes
+                            use of Bootstrap for stylization and jQuery and Plotly.js for fetching and rendering data.
+                            It contains several pages of graphs relating to comet discoveries, orbital elements, and
+                            unique object observations.
+                            <br><br>
+                            Backend uses a Python script to interact with a variety of databases through either a
+                            PostgreSQL Python library or through HTTP requests. Data is then processed and made
+                            available to frontend.
+                            <br><br>
+                            This project is associated with the NASA Planetary Data System Small Bodies Node at the
+                            University of Maryland. Please note that it is still under development.
+                        </p>
+                        <a href="https://sbnmpc.astro.umd.edu/cometInfo/" class="btn btn-primary card-link">Site
+                            Link</a>
+                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
+                            unavailable)</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Bloom Filter (Python)<span style="float: right;">(May 2023 - May
+                                2023)</span></h5>
+                        <p class="card-text">Implemented insert, hash, rebuild, and search functions for a Bloom Filter.
+                            Allows for arbitrary bit array length, number of hash functions, and max false-positive
+                            probability. Automatically rebuilds the Bloom Filter when the false-positive probability is
+                            greater than the threshold as determined by a simplified, approximate probability formula.
+                            <br><br>
+                            This project is associated with <i>CMSC420: Advanced Data Structures</i> at
+                            the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Ghostbusters/Inference (Python)<span style="float: right;">(May
+                                2023 - May 2023)</span></h5>
+                        <p class="card-text">Implemented several functions relating to Bayes' Nets for a
+                            Ghostbusters-themed Pacman game. Functions included
+                            calculating probabilities based on given data, updating belief distributions based on
+                            different conditions, particle filters, and joint distributions.
+                            <br><br>
+                            This project is associated with <i>CMSC421: Introduction to Artificial Intelligence</i> at
+                            the University of Maryland and is from UC Berkeley's <i>CS188: Introduction to
+                                Artificial Intelligence</i>.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Reinforcement Learning (Python)<span style="float: right;">(Mar 2023 -
+                                Apr 2023)</span></h5>
+                        <p class="card-text">Implemented reinforcement learning algorithms. Included value iteration,
+                            asynchronous value iteration, prioritized
+                            sweeping value iteration, q-learning, epsilon-greedy action selection, and approximate
+                            q-learning. Also specified
+                            discount, noise, and living reward values along with epsilon and learning rate values to
+                            create effective policies for
+                            several predetermined grid worlds that each utilized different reinforcement learning
+                            algorithms.
+                            <br><br>
+                            This project is associated with <i>CMSC421: Introduction to Artificial Intelligence</i> at
+                            the University of Maryland and is from UC Berkeley's <i>CS188: Introduction to
+                                Artificial Intelligence</i>.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">AVL Tree (Python)<span style="float: right;">(Feb 2023 - Mar 2023)</span>
+                        </h5>
+                        <p class="card-text">Implemented insertion, bulk delete, and search functions for an AVL Tree.
+                            Insertion included recursively checking balance factors and left- or right-rotating where
+                            needed. Bulk delete included inorder traversal, deletion, and reinsertion per project
+                            guidelines. Search combined binary search and recursive backtracking to return a path-value
+                            tuple.
+                            <br><br>
+                            This project is associated with <i>CMSC420: Advanced Data Structures</i> at
+                            the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Multi-Agent Search (Python)<span style="float: right;">(Feb 2023 - Mar
+                                2023)</span></h5>
+                        <p class="card-text">Implemented generalized Minimax and Expectimax algorithms allowing for
+                            arbitrary numbers of adversaries and an arbitrary
+                            search depth. Implemented a second Minimax algorithm incorporating Alpha-Beta Pruning to
+                            reduce computation. Also
+                            implemented reflex- and state-based evaluation functions.
+                            <br><br>
+                            This project is associated with <i>CMSC421: Introduction to Artificial Intelligence</i> at
+                            the University of Maryland and is from UC Berkeley's <i>CS188: Introduction to
+                                Artificial Intelligence</i>.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">DFS, BFS, UCS, and A* Search (Python)<span style="float: right;">(Feb
+                                2023 - Feb 2023)</span></h5>
+                        <p class="card-text">Implemented Depth-First, Breadth-First, Uniform Cost, and A* Search
+                            algorithms for a predesigned, non-adversarial Pacman
+                            simulation. Also designed heuristic functions for specific problems.
+                            <br><br>
+                            This project is associated with <i>CMSC421: Introduction to Artificial Intelligence</i> at
+                            the University of Maryland and is from UC Berkeley's <i>CS188: Introduction to
+                                Artificial Intelligence</i>.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">"MicrOCaml" Lexer, Parser, and Interpreter (OCaml)<span
+                                style="float: right;">(Nov 2022 - Nov 2022)</span></h5>
+                        <p class="card-text">Implemented a lexer, recursive descent parser, and interpreter for
+                            "MicrOCaml", a simplified version of OCaml defined by course faculty. Also implemented
+                            MicrOCaml's REPL, "mutop". This project makes significant use of pattern matching and
+                            recursion.
+                            <br><br>
+                            This project is associated with <i>CMSC330: Organization of Programming Languages</i> at
+                            the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+            <!-- end project descriptions -->
 
             <hr />
 
