--- a/resume.html
+++ b/resume.html
@@ -156,7 +156,7 @@
                     <li>Allows for arbitrary bit array length, number of hash functions, and max false-positive
                         probability</li>
                     <li>Automatically rebuilds the Bloom Filter when the false-positive probability is greater than the
-                        threshold as determind by a simplified, approximate probability formula</li>
+                        threshold as determined by a simplified, approximate probability formula</li>
                 </ul>
                 <li><strong>Reinforcement Learning (Python)<span style="float: right">(CMSC421, Spring 2023,
                             UMD)</span></strong></li>
