Updated resumes, added Racket to language list on index.html

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
                     <img src="/assets/images/langs/ruby.svg" class="langSVG" height="70px" title="Ruby" alt="Ruby">
                 </div>
                 <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/racket.svg" class="langSVG" height="70px" title="Racket"
+                        alt="Racket">
+                </div>
+                <div class="col-sm col-custom">
                     <img src="/assets/images/langs/html.svg" class="langSVG" height="70px" title="HTML5" alt="HTML5">
                 </div>
                 <div class="col-sm col-custom">
