--- a/resume.html
+++ b/resume.html
@@ -124,7 +124,8 @@
                     </li>
                     <li>Diploma Expected Dec 2024</li>
                     <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: CMSC430 - Compilers; CMSC421 - Intro to AI; CMSC420 - Advanced Data
+                    <li>Relevant Coursework: CMSC430 - Intro to Compilers; CMSC421 - Intro to AI; CMSC420 - Advanced
+                        Data
                         Structures; CMSC351
                         - Algorithms</li>
                     <li>Member: Multi-Agent Reinforcement Learning Reading Group; History Undergraduate Association</li>
@@ -133,7 +134,7 @@
 
             <h4>Skills and Attributes</h4>
             <ul>
-                <li>Languages: Python, Java, C, Rust, Ruby, OCaml, HTML, CSS, JavaScript, SQL</li>
+                <li>Languages: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
                 <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
                 <li>Tools and Environments: UNIX, VS Code, Eclipse IDE</li>
                 <li>Coding Skills: Debugging, good code readability, version control</li>
@@ -147,7 +148,7 @@
                 <ul>
                     <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev</a> ) with
                         focuses on user experience and mobile readiness</li>
-                    <li>Using JavaScript to implement desired features including animations and dark mode toggling</li>
+                    <li>Using JavaScript and GitHub's REST API to implement desired functionalities</li>
                 </ul>
                 <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420, Spring 2023,
                             UMD)</span></strong></li>
@@ -175,7 +176,7 @@
                             2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Creating a comet statistic site for the NASA Planetary Data System-Small Bodies Node at UMD</li>
+                    <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
                     <li>Designing frontend using HTML, CSS, JS, and various frameworks to create a seamless user
                         experience with desired functionality</li>
                     <li>Implementing backend using Python to create an automated script that pulls from multiple
@@ -259,7 +260,7 @@
                 <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun 2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Creating a comet statistic site for the NASA Planetary Data System-Small Bodies Node at UMD</li>
+                    <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
                     <li>Combining several software suites to create a seamless user experience with desired
                         functionality</li>
                     <li>Requires strong teamwork and communication skills; involves significant collaboration with the
