Fixed words in changelog.html .
At one point I changed all occurrences of "commit" to "card-spacing", forgetting that some occurrences of commit were not in class attributes but were actually supposed to be displayed on the page.

--- a/changelog.html
+++ b/changelog.html
@@ -112,10 +112,10 @@
             <div class="card-spacing"></div>
 
             <!-- note regarding GitHub's card-spacing message formatting -->
-            <h5 class="text-center"><i>Please note that while GitHub internally supports separate card-spacing
+            <h5 class="text-center"><i>Please note that while GitHub internally supports separate commit
                     summaries
                     and descriptions, their public API does not</i></h5>
-            <h5 class="text-center"><i>Therefore, if a card-spacing description was provided, it will appear appended to
+            <h5 class="text-center"><i>Therefore, if a commit description was provided, it will appear appended to
                     the
                     summary</i></h5>
 
