Fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <li>My general programming focuses:
                             <ul>
                                 <li>Space- and run-time efficiency</li>
-                                <li>Code maintability (comments, modularity, etc.)</li>
+                                <li>Code maintainability (comments, modularity, etc.)</li>
                             </ul>
                         </li>
                         <li>I am the (self-proclaimed) best ping pong player in the world
