Modified order of coding projects, updated Comet Statistics description

--- a/coding.html
+++ b/coding.html
@@ -160,6 +160,39 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Comet Statistics<span style="float: right;">(Jun
+                                2023 - Present)</span></h5>
+                        <p class="card-text">Creating a comet statistic site for the NASA Planetary Data System Small
+                            Bodies Node at the University of Maryland.
+                            Frontend is being designed with HTML, CSS, and JavaScript, along with the jQuery, Plotly.js,
+                            and Bootstrap frameworks.
+                            <br><br>
+                            Site backend is being implemented with Python. HTTP requests and a PostgreSQL Python library
+                            are used to fetch data from
+                            multiple databases before processing. Error checking is used where appropriate to ensure
+                            graceful exits or, where
+                            possible, continued processing with error logs.
+                            <br><br>
+                            Preparing to present the site at the ADASS Conference in November 2023. The abstract was
+                            submitted and approved in
+                            September 2023.
+                            <br><br>
+                            This project is associated with the NASA Planetary Data System Small Bodies Node at the
+                            University of Maryland. Please note that it is still under development.
+                        </p>
+                        <a href="https://sbnmpc.astro.umd.edu/cometInfo/" class="btn btn-primary card-link">Site
+                            Link</a>
+                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
+                            unavailable)</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">This website! (HTML, CSS, JavaScript)<span style="float: right;">(Jun
                                 2023 - Present)</span>
                         </h5>
@@ -171,33 +204,6 @@
                             Analytics for generating privacy-friendly usage statistics.</p>
                         <a href="https://github.com/psmit703/personal-website" class="btn btn-primary card-link">GitHub
                             Repo</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-spacing"></div>
-
-            <div class="card-wrapper d-flex justify-content-center">
-                <div class="card" style="width: 80%;">
-                    <div class="card-body">
-                        <h5 class="card-title">Comet Statistics<span style="float: right;">(Jun
-                                2023 - Present)</span></h5>
-                        <p class="card-text">This is a site that displays trends in comet data over time. Frontend makes
-                            use of Bootstrap for stylization and jQuery and Plotly.js for fetching and rendering data.
-                            It contains several pages of graphs relating to comet discoveries, orbital elements, and
-                            unique object observations.
-                            <br><br>
-                            Backend uses a Python script to interact with a variety of databases through either a
-                            PostgreSQL Python library or through HTTP requests. Data is then processed and made
-                            available to frontend.
-                            <br><br>
-                            This project is associated with the NASA Planetary Data System Small Bodies Node at the
-                            University of Maryland. Please note that it is still under development.
-                        </p>
-                        <a href="https://sbnmpc.astro.umd.edu/cometInfo/" class="btn btn-primary card-link">Site
-                            Link</a>
-                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
-                            unavailable)</a>
                     </div>
                 </div>
             </div>
