--- a/resume.html
+++ b/resume.html
@@ -143,30 +143,32 @@
 
             <h4>Programming Projects</h4>
             <ul>
+                <li><strong>Comet Statistics (HTML, CSS, JS, Python)<span style="float: right">(Web Dev Intern at UMD,
+                            Jun 2023 - Present)</span></strong></li>
+                <ul>
+                    <li>Designing frontend with HTML, CSS, and JS; and jQuery, Plotly.js, and Bootstrap frameworks</li>
+                    <li>Implementing backend using Python to create an automated script that pulls from multiple
+                        databases using HTTP requests and a PostgreSQL Python library with error checking where
+                        appropriate</li>
+                    <li>Preparing for presentation at ADASS Conference in Nov 2023; abstract submitted Sep 2023</li>
+                    <li><a href="https://sbnmpc.astro.umd.edu/cometInfo/">https://sbnmpc.astro.umd.edu/cometInfo/</a>
+                        (note: site still in development)</li>
+                </ul>
                 <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">(Personal Project, Jun 2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev</a> ) with
+                    <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) with
                         focuses on user experience and mobile readiness</li>
                     <li>Using JavaScript and GitHub's REST API to implement desired functionalities</li>
                 </ul>
-                <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420, Spring 2023,
-                            UMD)</span></strong></li>
+                <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420 at UMD, May 2023 - May
+                            2023)</span></strong></li>
                 <ul>
                     <li>Implemented insert, hash, rebuild, and search functions for a Bloom Filter</li>
                     <li>Allows for arbitrary bit array length, number of hash functions, and max false-positive
                         probability</li>
                     <li>Automatically rebuilds the Bloom Filter when the false-positive probability is greater than the
                         threshold as determined by a simplified, approximate probability formula</li>
-                </ul>
-                <li><strong>Reinforcement Learning (Python)<span style="float: right">(CMSC421, Spring 2023,
-                            UMD)</span></strong></li>
-                <ul>
-                    <li>Implemented Value Iteration (batch, async., and priporitized), Q-Learning, Epsilon Greedy, and
-                        Approximate Q-Learning algorithms</li>
-                    <li>Specified values for Discount, Noise, Living Reward, Epsilon, and Learning Rate for simulations
-                    </li>
-                    <li>From UC Berkeley's CS188 Project 3</li>
                 </ul>
             </ul>
 
@@ -177,10 +179,10 @@
                             Present)</span></strong></li>
                 <ul>
                     <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Designing frontend using HTML, CSS, JS, and various frameworks to create a seamless user
-                        experience with desired functionality</li>
-                    <li>Implementing backend using Python to create an automated script that pulls from multiple
-                        databases using HTTP requests and a PostgreSQL Python library</li>
+                    <li>Creating a tool to automate converting from the "new" IAU comet designation system to the "old"
+                        system</li>
+                    <li>Gaining a strong understanding of SQL, interacting with web APIs, and general web development
+                    </li>
                 </ul>
             </ul>
             <!-- end technical resume -->
@@ -227,8 +229,7 @@
             <h4>Selected Papers</h4>
             <ul>
                 <li><strong>"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
-                            style="float: right">HIST354,
-                            Spring 2023, UMD</span></strong></li>
+                            style="float: right">(HIST354 at UMD, Spring 2023)</span></strong></li>
                 <ul>
                     <li>In the context of the critiques in Charles Dickens' American Notes, this paper examines a
                         variety of
@@ -241,8 +242,8 @@
                         rapidly increasing societal division seen at the time.
                     </li>
                 </ul>
-                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">HIST429A, Fall 2022,
-                            UMD</span></strong></li>
+                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">(HIST429A at UMD, Fall
+                            2022)</span></strong></li>
                 <ul>
                     <li>This paper explores the various elements of what it meant to be masculine in Victorian Britain,
                         namely
@@ -257,22 +258,22 @@
 
             <h4>Work Experience</h4>
             <ul>
+                <li><strong>History Intern (Enslaved.org: Journal of Slavery and Data Preservation)<span
+                            style="float: right">(Aug 2023 - Present)</span></strong></li>
+                <ul>
+                    <li>Work will involve collaborating with a team at Virginia Tech to research runaway indentured
+                        servants and enslaved people in colonial Virginia and Maryland</li>
+                    <li>Analyzing contemporary documents to document biographical information of enslaved people</li>
+                    <li>Involves visiting historical sites such as the Riversdale House Museum</li>
+                </ul>
                 <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun 2023 -
                             Present)</span></strong></li>
                 <ul>
                     <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Combining several software suites to create a seamless user experience with desired
-                        functionality</li>
-                    <li>Requires strong teamwork and communication skills; involves significant collaboration with the
-                        supervisor and the overall team</li>
-                </ul>
-                <li><strong>Crew Member (McDonald's)<span style="float: right">(Jun 2022 -
-                            Aug 2022)</span></strong></li>
-                <ul>
-                    <li>Delivered quick, friendly customer service taking orders and payments for afternoon and night
-                        shifts</li>
-                    <li>Assisted with maintaining store cleanliness in line with company standards</li>
-                    <li>Required good teamwork and communication to ensure smooth operation</li>
+                    <li>Preparing to present <i>Comet Statistics</i> at ADASS Conference in Nov 2023; abstract submitted
+                        Sep 2023</li>
+                    <li>Creating a tool to automate converting from the "new" to the "old" IAU comet designation system
+                    </li>
                 </ul>
             </ul>
             <!-- end humanities resume -->
