Added Dupe Plus (CMSC430) to coding projects

--- a/coding.html
+++ b/coding.html
@@ -115,6 +115,38 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Dupe Plus: Parser, Interpreter, and Compiler (Racket)<span
+                                style="float: right;">(Sep 2023 - Oct
+                                2023)</span></h5>
+                        <p class="card-text">Dupe Plus is an extension of Dupe, a programming language created by the
+                            CMSC430 course faculty. Dupe was discussed in
+                            lecture, and Dupe Plus is an extension of it; both Dupe and Dupe Plus are subsets of Racket,
+                            which the project was
+                            implemented in.
+                            <br><br>
+                            The project involved an extensive use of pattern matching to allow for parsing,
+                            interpreting, and compiling code such as
+                            "cond" and "case" (with slightly different behaviors from Racket, as outlined by course
+                            faculty) which each allow for an
+                            arbitrary number of clauses. Parsed code was compiled into a86, a subset of Intel's x86
+                            assembly language, as defined by
+                            course faculty.
+                            <br><br>
+                            This project is associated with <i>CMSC430: Introduction to Compilers</i> at the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023 - Sep
                                 2023)</span></h5>
                         <p class="card-text">This is a collection of short Racket functions intended to familiarize
