Added languages to Comet Statistics in coding projects page

--- a/coding.html
+++ b/coding.html
@@ -192,7 +192,8 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Comet Statistics<span style="float: right;">(Jun
+                        <h5 class="card-title">Comet Statistics (HTML, CSS, JavaScript, Python)<span
+                                style="float: right;">(Jun
                                 2023 - Present)</span></h5>
                         <p class="card-text">Creating a comet statistic site for the NASA Planetary Data System Small
                             Bodies Node at the University of Maryland.
